--- a/Author.UWP/Author.UWP.csproj
+++ b/Author.UWP/Author.UWP.csproj
@@ -155,6 +155,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>6.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="Behaviors.Forms">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.3.3</Version>
     </PackageReference>
