--- a/Author.iOS/packages.config
+++ b/Author.iOS/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="Acr.UserDialogs" version="6.5.1" targetFramework="xamarinios10" />
+  <package id="Behaviors.Forms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="BTProgressHUD" version="1.2.0.5" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
@@ -7,10 +11,11 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
   <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
-  <package id="PInvoke.BCrypt" version="0.5.64" targetFramework="xamarinios10" />
-  <package id="PInvoke.Kernel32" version="0.5.64" targetFramework="xamarinios10" />
-  <package id="PInvoke.NCrypt" version="0.5.64" targetFramework="xamarinios10" />
-  <package id="PInvoke.Windows.Core" version="0.5.64" targetFramework="xamarinios10" />
+  <package id="PInvoke.BCrypt" version="0.5.86" targetFramework="xamarinios10" />
+  <package id="PInvoke.Kernel32" version="0.5.86" targetFramework="xamarinios10" />
+  <package id="PInvoke.NCrypt" version="0.5.86" targetFramework="xamarinios10" />
+  <package id="PInvoke.Windows.Core" version="0.5.86" targetFramework="xamarinios10" />
+  <package id="Splat" version="2.0.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
