--- a/Author.iOS/packages.config
+++ b/Author.iOS/packages.config
@@ -2,19 +2,18 @@
 <packages>
   <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Acr.UserDialogs" version="6.5.1" targetFramework="xamarinios10" />
-  <package id="Behaviors.Forms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Behaviors.Forms" version="1.2.0" targetFramework="xamarinios10" />
   <package id="BTProgressHUD" version="1.2.0.5" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="xamarinios10" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="xamarinios10" />
-  <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
-  <package id="PInvoke.BCrypt" version="0.5.86" targetFramework="xamarinios10" />
-  <package id="PInvoke.Kernel32" version="0.5.86" targetFramework="xamarinios10" />
-  <package id="PInvoke.NCrypt" version="0.5.86" targetFramework="xamarinios10" />
-  <package id="PInvoke.Windows.Core" version="0.5.86" targetFramework="xamarinios10" />
+  <package id="PInvoke.BCrypt" version="0.5.97" targetFramework="xamarinios10" />
+  <package id="PInvoke.Kernel32" version="0.5.97" targetFramework="xamarinios10" />
+  <package id="PInvoke.NCrypt" version="0.5.97" targetFramework="xamarinios10" />
+  <package id="PInvoke.Windows.Core" version="0.5.97" targetFramework="xamarinios10" />
   <package id="Splat" version="2.0.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
@@ -63,5 +62,6 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Validation" version="2.4.15" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
+  <package id="Xamarin.Auth" version="1.5.0.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.267" targetFramework="xamarinios10" />
 </packages>
