--- a/Author.Android/Properties/AndroidManifest.xml
+++ b/Author.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" package="xyz.metaman.Author" android:versionCode="1" android:versionName="0.1.0.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="xyz.metaman.Author" android:versionCode="1" android:versionName="0.1.0.0">
 	<uses-sdk android:minSdkVersion="15" />
 	<application android:label="Author" android:icon="@drawable/Icon"></application>
 </manifest>
