--- a/Author.Android/packages.config
+++ b/Author.Android/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid71" />
-  <package id="Acr.UserDialogs" version="6.5.1" targetFramework="monoandroid71" />
+  <package id="Acr.UserDialogs" version="6.5.1" targetFramework="monoandroid80" />
   <package id="AndHUD" version="1.2.0" targetFramework="monoandroid71" />
   <package id="Behaviors.Forms" version="1.2.0" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
@@ -57,7 +57,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Validation" version="2.4.18" targetFramework="monoandroid80" />
@@ -83,4 +83,5 @@
   <package id="Xamarin.Android.Support.Vector.Drawable" version="26.1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Auth" version="1.5.0.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="monoandroid80" />
 </packages>
