--- a/Author.iOS/Info.plist
+++ b/Author.iOS/Info.plist
@@ -52,7 +52,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>0.1.0.0</string>
 	<key>XSLaunchImageAssets</key>
-	<string>Resources/Media.xcassets/LaunchImages.launchimage</string>
+	<string>Resources/Media.xcassets/LaunchImage.launchimage</string>
 	<key>CFBundleName</key>
 	<string>Author</string>
 	<key>CFBundleURLTypes</key>
@@ -71,6 +71,6 @@
 		</dict>
 	</array>
 	<key>XSAppIconAssets</key>
-	<string>Resources/Media.xcassets/AppIcons.appiconset</string>
+	<string>Resources/Media.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
