Add CustomUserDialogs class for Acr.UserDialogs on macOS
Uses NSUserNotificationCenter

--- a/Author.macOS/Info.plist
+++ b/Author.macOS/Info.plist
@@ -41,5 +41,7 @@
 			<string>Author</string>
 		</dict>
 	</array>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 </dict>
 </plist>
