Added read/write Android permissions and iCloud entitlements

--- a/Author.iOS/Info.plist
+++ b/Author.iOS/Info.plist
@@ -72,5 +72,10 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Media.xcassets/AppIcon.appiconset</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
