--- a/Author.macOS/Author.macOS.csproj
+++ b/Author.macOS/Author.macOS.csproj
@@ -200,6 +200,11 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\ic_import_export%402x.png" />
+    <Content Include="Resources\ic_import_export%403x.png" />
+    <Content Include="Resources\ic_import_export.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
   </ItemGroup>
